# devcontainers

./: .gitignore  README.md  build-images.ps1  build-images.tests.ps1  pyproject.toml
.github/workflows/: build-ramalama.yml  build.yml  dvt-ci.yml  publish-features.yml  test.yml
base/: Dockerfile
docs/superpowers/plans/: 2026-05-04-local-llm-features.md  2026-07-13-claude-agent-containment.md  2026-07-23-cli-first-templates.md  2026-07-23-dvt-template-cli.md
docs/superpowers/specs/: 2026-05-04-local-llm-features-design.md  2026-07-13-claude-agent-containment-design.md  2026-07-23-cli-first-templates-design.md  2026-07-23-dvt-template-cli-design.md
dvt/: README.md  pyproject.toml
dvt/docs/: mkdocs.yml
dvt/docs/content/: api.md  index.md
dvt/scripts/: docs.py  quality.py  test.py  utils.py
dvt/src/devtemplate/: cli.py  config.py  github.py  merge.py  models.py  schema.py  store.py
dvt/src/devtemplate/commands/: project.py  template.py
dvt/tests/: conftest.py  test_cli.py  test_config.py  test_github.py  test_merge.py  test_merge_properties.py  test_models.py  test_project_command.py  test_schema.py  test_store.py  test_template_command.py
examples/ollama-sidecar/.devcontainer/: devcontainer.json  docker-compose.yml
examples/ramalama-sidecar/.devcontainer/: devcontainer.json  docker-compose.yml
features/agent/: devcontainer-feature.json  init-firewall.sh  install.sh
features/claude-agent/: devcontainer-feature.json  init-firewall.sh  install.sh  vibe
features/cli/: devcontainer-feature.json  install.sh
features/fastapi/: devcontainer-feature.json  install.sh
features/huggingface/: devcontainer-feature.json  install.sh
features/jax/: devcontainer-feature.json  install.sh
features/marimo/: devcontainer-feature.json  install.sh
features/mojo/: devcontainer-feature.json  install.sh
features/ollama/: devcontainer-feature.json  install.sh
features/py-devtools/: devcontainer-feature.json  install.sh
features/pytorch/: devcontainer-feature.json  install.sh
features/ramalama/: devcontainer-feature.json  install.sh
features/rapids/: devcontainer-feature.json  install.sh
features/transformers/: devcontainer-feature.json  install.sh
flavour/: Dockerfile
flavours/jax/: pixi.toml
flavours/mojo/: pixi.toml
flavours/pytorch/: pixi.toml
flavours/rapids/: pixi.toml
host-services/ollama/: .env.example  README.md  docker-compose.yml
host-services/ramalama/: .env.example  README.md  docker-compose.yml
ramalama/: Dockerfile
templates/agent/: devcontainer.json
templates/cli/: devcontainer.json
templates/fastapi/: devcontainer.json
templates/huggingface/: devcontainer.json
templates/jax/: devcontainer.json
templates/marimo/: devcontainer.json
templates/mojo/: devcontainer.json
templates/ollama/: devcontainer.json
templates/py-devtools/: devcontainer.json
templates/pytorch/: devcontainer.json
templates/rapids/: devcontainer.json
templates/transformers/: devcontainer.json
tests/: conftest.py  test_static.py
tests/features/: test_agent.py  test_claude_agent.py  test_ollama.py  test_ramalama.py
tests/integration/: test_ollama_sidecar.py  test_ramalama_sidecar.py
