[project]
name = "devcontainers-tests"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.13"
pytest = ">=8.0"
pyyaml = ">=6.0"
