[project]
name = "devtemplate"
version = "0.1.0"
description = "Layered, dev-style named devcontainer templates on top of DevPod"
requires-python = ">=3.12,<3.14"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "platformdirs>=4.0",
    "httpx>=0.27",
    "jsonschema>=4.18",
    "logerr[retry] @ git+https://github.com/jesserobertson/logerr.git@f9b178d4866f59e8f2c1832f00f99c0a80413997",
]

[project.scripts]
dvt = "devtemplate.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devtemplate"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=devtemplate --cov-report=term-missing"
markers = [
    "unit: fast, fully mocked tests (auto-applied by default, see conftest.py)",
    "integration: tests that exercise a real devpod/network call",
    "slow: tests that take noticeably longer than the rest of the suite",
    "network: tests that require real network access",
]

[tool.coverage.run]
source = ["src/devtemplate"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
devtemplate = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.12,<3.14"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.0"
hypothesis = ">=6.100"
pytest-cov = ">=5.0"
ruff = ">=0.15.22,<0.16"

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"

[tool.pixi.environments]
default = { features = ["dev", "docs"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
runtime = { solve-group = "default" }

[tool.pixi.tasks]
quality = { cmd = "python scripts/quality.py", description = "Code quality management (lint, format, typecheck)" }
test = { cmd = "python scripts/test.py", description = "Testing management (unit, integration, fast, all)" }
docs = { cmd = "python scripts/docs.py", description = "Documentation management (serve, build, status)" }
check-all = { cmd = "python scripts/test.py all && python scripts/quality.py check", description = "Run comprehensive checks (all tests + quality)" }
clean = { cmd = "python scripts/test.py clean && python scripts/docs.py clean", description = "Clean all project artifacts (test, docs)" }

[dependency-groups]
dev = ["mypy>=2.3.0,<3", "types-jsonschema>=4.26.0.20260518,<5"]
